cmake_minimum_required(VERSION 2.8.12.2)
project(sat_solver)
macro(use_cxx11)
    if (CMAKE_VERSION VERSION_LESS "3.1")
        if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            set (CMAKE_CXX_FLAGS "-std=gnu++11 ${CMAKE_CXX_FLAGS}")
        endif ()
    else ()
        set (CMAKE_CXX_STANDARD 11)
    endif ()
endmacro(use_cxx11)

use_cxx11()

find_package(MPI REQUIRED)
include_directories(${MPI_INCLUDE_PATH})
set(SOURCE_FILES src/sequential_main.cpp src/cnfparser.cpp src/CNF.cpp src/clause.cpp src/worker.cpp src/dpll.cpp src/exceptions.cpp src/variable.cpp src/Model.h src/Model.cpp src/Master.h src/Master.cpp src/cdcl.cpp src/cdcl.h)
add_executable(sequential_main ${SOURCE_FILES})
target_link_libraries(sequential_main ${MPI_LIBRARIES})

include_directories(${MPI_INCLUDE_PATH})
set(SOURCE_FILES src/parallel_main.cpp src/cnfparser.cpp src/CNF.cpp src/clause.cpp src/worker.cpp  src/dpll.cpp src/exceptions.cpp src/variable.cpp src/mpi_types.h src/Model.h src/Model.cpp src/Master.h src/Master.cpp)
add_executable(parallel_main ${SOURCE_FILES})
target_link_libraries(parallel_main ${MPI_LIBRARIES})
